Updated reservas date fetch